RESOLVED FIXED206544
Performance tests fail if stderr logging is encountered
https://bugs.webkit.org/show_bug.cgi?id=206544
Summary Performance tests fail if stderr logging is encountered
Brent Fulgham
Reported 2020-01-21 11:38:50 PST
In Bug 200543 (and other updates) we changed our sandbox code to use vend extensions to processes by audit token. During this change, we used the WTFLogAlways() logging function when a sandbox extension could not be created. We now see that any output to stderr causes the test runner used by the micro-benchmark system in PerformanceTests to trigger a failure. Now that we have debugged this code, we should switch back to our standard logging behavior.
Attachments
Patch (1.60 KB, patch)
2020-01-21 11:40 PST, Brent Fulgham
no flags
Brent Fulgham
Comment 1 2020-01-21 11:39:54 PST
Brent Fulgham
Comment 2 2020-01-21 11:40:44 PST
Per Arne Vollan
Comment 3 2020-01-21 11:44:46 PST
Comment on attachment 388328 [details] Patch Great! R=me.
WebKit Commit Bot
Comment 4 2020-01-21 12:34:48 PST
Comment on attachment 388328 [details] Patch Clearing flags on attachment: 388328 Committed r254872: <https://trac.webkit.org/changeset/254872>
WebKit Commit Bot
Comment 5 2020-01-21 12:34:50 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.