Performance tests fail if stderr logging is encountered https://bugs.webkit.org/show_bug.cgi?id=206544 <rdar://problem/58714766>

Reviewed by Per Arne Vollan.

Switch to LOG_ERROR, rather than WTFLogAlways, to avoid confusing the PerformanceTests system.

* Shared/Cocoa/SandboxExtensionCocoa.mm:
(WebKit::SandboxExtension::createHandleForReadByAuditToken):


Canonical link: https://commits.webkit.org/219607@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254872 268f45cc-cd09-0410-ab3c-d52691b4dbfc